<resources>
    <string name="app_name">Kalkulator</string>
    <string name="main_text">Calculator</string>
    <string name="button1">Simple</string>
    <string name="button2">Advanced</string>
    <string name="button3">About</string>
    <string name="button4">Exit</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="diff_sign">+-</string>
    <string name="clear">C</string>
    <string name="Remove">Bcksp</string>
    <string name="sqrt">sqrt</string>
    <string name="x2">x^2</string>
    <string name="xy">x^y</string>
    <string name="log">log</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="ln">ln</string>
    <string name="procent">%</string>

</resources>